--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.gyf.loadview"
-        minSdkVersion 14
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -20,10 +20,44 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.1'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
+
     implementation project(':loadview')
+
+    // https://github.com/ldoublem/LoadingView
+    implementation 'com.ldoublem.loadingview:loadingviewlib:1.0'
+
+    // https://github.com/Rogero0o/CatLoadingView
+    implementation 'com.roger.catloadinglibrary:catloadinglibrary:1.0.4'
+
+    //
+    implementation 'me.wangyuwei:LoadingiVew:1.0.5'
+
+    // https://github.com/Ajian-studio/GABottleLoading
+    implementation 'com.github.Ajian-studio:GABottleLoading:1.0.1'
+
+    // https://github.com/JeasonWong/SlackLoadingView
+    implementation 'me.wangyuwei:SlackLoadingView:1.0.1'
+
+    // https://github.com/yuweiguocn/SquareLoading
+    implementation 'io.github.yuweiguocn:SquareLoading:1.3.0'
+
+    // https://github.com/Carson-Ho/Kawaii_LoadingView
+    implementation 'com.carson_ho:Kawaii_LoadingView:1.0.0'
+
+    // https://github.com/zzz40500/android-shapeLoadingView
+    implementation 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
+
+    implementation 'com.airbnb.android:lottie:2.6.0-beta19'
+
 }
