--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
+        maven {
+            url 'https://dl.bintray.com/wangyuwei/maven'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath 'com.novoda:bintray-release:0.8.1'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,6 +25,12 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
+        maven {
+            url 'https://dl.bintray.com/wangyuwei/maven'
+        }
     }
 }
 
