--- a/loadview/build.gradle
+++ b/loadview/build.gradle
@@ -28,7 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -38,7 +38,7 @@ publish {
     userOrg = 'geyifeng'
     groupId = 'com.gyf.loadview'
     artifactId = 'loadview'
-    publishVersion = '1.0.0'
+    publishVersion = '1.0.1'
     desc = 'Android Load View'
     website = 'https://github.com/gyf-dev/LoadView'
 }
