--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,15 @@ allprojects {
             url 'https://dl.bintray.com/wangyuwei/maven'
         }
     }
+    tasks.withType(Javadoc) {
+        options {
+            encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
+        }
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+    }
 }
 
 task clean(type: Delete) {
